@@ -84,6 +84,10 @@ void optimizerGroup(int64_t group, c10::List<at::Tensor> &&inputs) {
   UNUSED(inputs);
 }
 
+c10::List<at::Tensor> recomputationCheckpoint(c10::List<at::Tensor> inputs) {
+  return inputs;
+}
+
 static auto registry =
     torch::RegisterOperators("poptorch::begin_ipu_block", &beginIpuBlock)
         .op("poptorch::end_ipu_block", &endIpuBlock)
@@ -93,6 +97,7 @@ static auto registry =
         .op("poptorch::identity_loss", &identityLoss)
         .op("poptorch::optimizer_group", &optimizerGroup)
         .op("poptorch::set_matmul_serialization", &setMatMulSerialization)
+        .op("poptorch::recomputation_checkpoint", &recomputationCheckpoint)
         .op("poptorch::set_available_memory", &setAvailableMemory);
 //.op("popart::convolution", convolution,
 // torch::RegisterOperators::options().aliasAnalysis(c10::AliasAnalysisKind::INTERNAL_SPECIAL_CASE));
